# node.ext.ldap

./: .coveragerc  .gitignore  .mr.developer.cfg  .travis.yml  CHANGES.rst  HISTORY.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  README.txt  TODO.org  TODO.rst  __init__.py  base.cfg  bootstrap.sh  buildout.cfg  dev.cfg  develop.cfg  ldap.cfg  ldap.rst  mrsd-bootstrap.cfg  mrsd.cfg  mx.ini  properties.py  pyproject.toml  run_coverage.sh  session.py  setup.cfg  setup.py  symlinks.cfg  travis.cfg  versions.cfg
.github/workflows/: test.yaml  test.yml
bda/ldap/: __init__.py  base.py  ldapcached.py  session.py  xldap.py
docs/archive/: _node.rst  base.rst  cache.rst  filter.rst  schema.rst
docs/archive/ugm/: posixGroups.rst
mk/: openldap.mk  python-ldap.mk
scripts/: coverage.sh  env.sh  test.sh  tests.sh
src-links/: node  odict  zodict
src/bda/ldap/: __init__.py  _znode.py  base.py  base.txt  cache.py  configure.zcml  debug.py  entry.py  entry.txt  filter.py  groups.py  groups.txt  interfaces.py  ldapcached.py  main.py  node.py  node.txt  properties.py  schema.py  schema.txt  session.py  session.txt  strcodec.py  testing.py  users.py  users.txt
src/bda/ldap/tests/: prepareslapd.txt  stopslapd.txt  test_ldap.py
src/bda/ldap/tests/ldifs/: base.ldif  users1000.ldif  users2000.ldif  users300.ldif  users700.ldif
src/node/ext/ldap/: TODO.txt  __init__.py  _node.py  _node.rst  _node.txt  _node_encoded.rst  _ugm.py  aliasing.txt  base.py  base.rst  base.txt  bbb.py  bbb.txt  cache.py  cache.rst  cache.txt  configure.zcml  debug.py  debug.txt  events.py  experimental.rst  filter.py  filter.rst  filter.txt  groups.txt  interfaces.py  main.py  node.txt  outbox.py  properties.py  properties.rst  schema.py  schema.rst  schema.txt  scope.py  session.py  session.rst  session.txt  strcodec.py  testing.py  (+9 more)
src/node/ext/ldap/outdated/: bbb.py_  outbox.py_  ugm.py_  users.py_
src/node/ext/ldap/testing/: __init__.py
src/node/ext/ldap/testing/ldifs/: data.ldif  genPosixGroups.py  genSambaUsers.py  gengroupOfNames.py  genusers.py  groupOfNames.ldif  groupOfNames_1000_1000_add.ldif  groupOfNames_100_100.ldif  groupOfNames_100_100_add.ldif  groupOfNames_10_10.ldif  groupOfNames_300_300.ldif  groupOfNames_300_300_add.ldif  groupOfNames_700_700_add.ldif  groupOfNames_add.ldif  posixGroups.ldif  posixGroups_10_10.ldif  principals.ldif  sambaUsers.ldif  ug-groupOfNames-rw.ldif  ug-groupOfNames.ldif
src/node/ext/ldap/testing/schema/: ad.dummy.schema
src/node/ext/ldap/tests/: __init__.py  _groupOfNames.txt  _groupOfNames_add.txt  groupOfNames.txt  groupOfNames_add.txt  posixGroups.txt  test_base.py  test_cache.py  test_filter.py  test_ldap.py  test_node.py  test_properties.py  test_schema.py  test_session.py  test_ugm_defaults.py  test_ugm_group_of_names.py  test_ugm_posix_groups.py  test_ugm_principals.py  test_ugm_samba_users.py  ug-groupOfNames.txt
src/node/ext/ldap/ugm/: __init__.py  _api.py  defaults.py  defaults.rst  defaults.txt  expires.py  groupOfNames.rst  groupOfNames.txt  posix.py  posixGroups.rst  posixGroups.txt  principals.rst  principals.txt  samba.py  sambaUsers.rst  shadow.py  ugm_principals.txt
src/zc.recipe.cmmi/: CHANGES.txt  README.txt  buildout.cfg  setup.py  test_all_pythons.cfg  to-do.txt
src/zc.recipe.cmmi/src/zc/recipe/cmmi/: README.txt  __init__.py  downloadcache.txt  misc.txt  patching.txt  shared.txt  tests.py
testenv/: data.ldif  users.ldif
