[metadata]
version = 1.0b12.dev0
name = node.ext.ldap
description = LDAP/AD convenience with Node-trees based on python-ldap
long_description = file: README.rst, CHANGES.rst, TODO.rst, LICENCE.rst
keywords = ldap, authentication, node, tree, access, users, groups, AD
author = BlueDynamics Alliance
author_email = dev@bluedynamics.com
url = https://github.com/bluedynamics/node.ext.ldap
license = Simplified BSD
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python
    Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP

[options]
include_package_data = True
install_requires =
    setuptools
    python-ldap>=2.4.14
    passlib
    argparse
    bda.cache
    odict>=1.6.1
    plumber>=1.4
    node>=0.9.20
    node.ext.ugm>=0.9.9

namespace_packages =
    node
    node.ext
package_dir =
    = src
packages = find:
zip_safe = False

[options.extras_require]
test =
    plone.testing
    zope.configuration
    zope.testing

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    testldap = node.ext.ldap.main:slapd

[zest.releaser]
create-wheel = yes
